On branch main  Changes to be committed: 	modified:   css/main.css 	modified:   js/classes.js 	modified:   js/main.js 	modified:   js/subFunc.js

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,12 @@ body{
     text-align: center;
     cursor: pointer;
 }
+.hiddenMenu{
+    opacity: 0;
+}
+.hiddenMenu:hover{
+    opacity: 1;
+}
 .noSelect {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
